# thesisWork

./: .gitignore  README.md  TODO  TestStatus  ThesisProposal.docx  tasks_for_thesis
OpenDaVINCI-msv/: .project
OpenDaVINCI-msv/.kdev4/: OpenDaVINCI-msv.kdev4
OpenDaVINCI-msv/examples/example3/: Example3Data.cpp
OpenDaVINCI-msv/examples/example7/: Example7Data.cpp  Example7Data.h
OpenDaVINCI-msv/libopendavinci/: CMakeLists.txt  CMakeLists.txt~
OpenDaVINCI-msv/libopendavinci/testsuites/: ContainerTestSuite.h  LCMSerializationTestSuite.h  ProtoSerializationTestSuite.h  ProtoSerializationTestSuite.h~  ROSSerializationTestSuite.h
OpenDaVINCI-msv/tools/: CMakeLists.txt~
approaches/lcm-1.2.1/: Makefile  config.status  libtool
approaches/lcm-1.2.1/autom4te.cache/: output.1  requests  traces.0  traces.1
approaches/lcm-1.2.1/examples/: Makefile
approaches/lcm-1.2.1/lcm/: Makefile
approaches/lcm-1.2.1/lcm-java/: Makefile
approaches/lcm-1.2.1/lcm-logger/: Makefile  lcm-logger  lcm-logplayer
approaches/lcm-1.2.1/lcm-lua/: Makefile
approaches/lcm-1.2.1/lcm-python/: Makefile
approaches/lcm-1.2.1/lcmgen/: Makefile  lcm-gen
approaches/lcm-1.2.1/liblcm-test/: Makefile  lcm-buftest-receiver  lcm-buftest-sender  lcm-example  lcm-logfilter  lcm-sink  lcm-source  lcm-tester
approaches/lcm-1.2.1/m4/: Makefile
approaches/lcm-1.2.1/m4macros/: Makefile
approaches/lcm-doxygen/html/: _a_annotation_content_component_8java.html  _a_axis_8java.html  _a_axis_action_8java.html  (+6782 more)
approaches/proto/: CMakeLists.txt  LICENSE  portable_endian.h  proto.cpp  proto.h
(+263 files in other folders)
